[Core] Correctly align the user menu in the back end.

--- a/core-bundle/src/Resources/contao/themes/flexible/src/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/main.css
@@ -90,7 +90,7 @@ body.popup {
 #tmenu ul.level_2 {
 	min-width:150px;
 	position:absolute;
-	right:3px;
+	right:6px;
 	margin-top:5px;
 	padding:6px 0 9px;
 	background:#fff;
